devops/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:12
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
