devops/django-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-app
          # Replace  with your project ID or use `make template`
          image: leoanesi/dojo-python-django
          # This setting makes nodes pull the docker image every time before
          # starting the pod. This is useful when debugging, but should be turned
          # off in production.
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: health
